#785: Add snapshot comparison information in reports
Add / update tests